# rand_wp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: configuration.rs  job.rs  main.rs
src/bg_setter/: mod.rs  windows.rs
src/rand_img/: goodfon.rs  mod.rs
src/wp_setter/: mod.rs  windows.rs
