[package]
name = "rand_wp"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_urlencoded = "0.7.1"
surf = "2.3.2"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
winapi = { version = "0.3.9", features = ["winuser"] }
